<resources>
    <string name="app_name">My Application</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search">Поиск</string>
    <string name="list_history">История</string>
    <string name="edit_bin">Введите первые 6–8 цифр номера карты (БИН/ИИН)</string>
    <string name="button_search">Поиск</string>
    <string name="card_type">Тип карты: </string>
    <string name="length_card">Длина карты: </string>
    <string name="card_scheme">Платежная система: </string>
    <string name="brand_card">Бренд: </string>
    <string name="prepaid_card">"Предоплаченная: "</string>
    <string name="country_card">"Страна: "</string>
    <string name="country_latitude">"(широта:"</string>
    <string name="country_longitude">" долгота:"</string>
    <string name="parenthesis">)</string>
    <string name="comma">,</string>
    <string name="bank_card">Банк: </string>
    <string name="bank_city">Страна</string>
    <string name="luhn_card">LUHN</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="input_error">Ошибка ввода</string>
</resources>