<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/title_scheme_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/card_scheme"
            android:theme="@style/MyTextView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/scheme_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:theme="@style/MyInformTextView"
            app:layout_constraintBottom_toBottomOf="@id/title_scheme_type"
            app:layout_constraintStart_toEndOf="@id/title_scheme_type" />

        <TextView
            android:id="@+id/title_card_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/card_type"
            android:theme="@style/MyTextView"
            app:layout_constraintStart_toStartOf="@id/title_scheme_type"
            app:layout_constraintTop_toBottomOf="@id/title_scheme_type" />

        <TextView
            android:id="@+id/card_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:theme="@style/MyInformTextView"
            app:layout_constraintBottom_toBottomOf="@id/title_card_type"
            app:layout_constraintStart_toEndOf="@id/title_card_type" />

        <TextView
            android:id="@+id/title_card_length"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/length_card"
            android:theme="@style/MyTextView"
            app:layout_constraintStart_toStartOf="@id/title_card_type"
            app:layout_constraintTop_toBottomOf="@id/title_card_type" />

        <TextView
            android:id="@+id/card_length"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:theme="@style/MyInformTextView"
            app:layout_constraintBottom_toBottomOf="@id/title_card_length"
            app:layout_constraintStart_toEndOf="@id/title_card_length" />

        <TextView
            android:id="@+id/title_card_luhn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_start_for_luhn"
            android:text="@string/luhn_card"
            android:theme="@style/MyTextView"
            app:layout_constraintBottom_toBottomOf="@id/card_length"
            app:layout_constraintStart_toEndOf="@id/card_length" />

        <TextView
            android:id="@+id/card_luhn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:theme="@style/MyInformTextView"
            app:layout_constraintBottom_toBottomOf="@id/title_card_luhn"
            app:layout_constraintStart_toEndOf="@id/title_card_luhn" />

        <TextView
            android:id="@+id/title_card_brand"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/brand_card"
            android:theme="@style/MyTextView"
            app:layout_constraintStart_toStartOf="@id/title_card_length"
            app:layout_constraintTop_toBottomOf="@id/title_card_length" />

        <TextView
            android:id="@+id/card_brand"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:theme="@style/MyInformTextView"
            app:layout_constraintBottom_toBottomOf="@id/title_card_brand"
            app:layout_constraintStart_toEndOf="@id/title_card_brand" />

        <TextView
            android:id="@+id/title_card_prepaid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/prepaid_card"
            android:theme="@style/MyTextView"
            app:layout_constraintStart_toStartOf="@id/title_card_brand"
            app:layout_constraintTop_toBottomOf="@id/title_card_brand" />

        <TextView
            android:id="@+id/card_prepaid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:theme="@style/MyInformTextView"
            app:layout_constraintBottom_toBottomOf="@id/title_card_prepaid"
            app:layout_constraintStart_toEndOf="@id/title_card_prepaid" />

        <TextView
            android:id="@+id/title_card_country"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/country_card"
            android:theme="@style/MyTextView"
            app:layout_constraintStart_toStartOf="@id/title_card_prepaid"
            app:layout_constraintTop_toBottomOf="@id/title_card_prepaid" />

        <TextView
            android:id="@+id/card_country"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:theme="@style/MyInformTextView"
            app:layout_constraintBottom_toBottomOf="@id/title_card_country"
            app:layout_constraintStart_toEndOf="@id/title_card_country" />

        <TextView
            android:id="@+id/title_card_country_latitude"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/country_latitude"
            android:theme="@style/MyTextView"
            app:layout_constraintBottom_toBottomOf="@id/card_country"
            app:layout_constraintStart_toEndOf="@id/card_country" />

        <TextView
            android:id="@+id/card_country_latitude"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:theme="@style/MyInformTextView"
            app:layout_constraintBottom_toBottomOf="@id/title_card_country_latitude"
            app:layout_constraintStart_toEndOf="@id/title_card_country_latitude" />

        <TextView
            android:id="@+id/title_card_country_longitude"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/country_longitude"
            android:theme="@style/MyTextView"
            app:layout_constraintStart_toStartOf="@id/title_card_country_latitude"
            app:layout_constraintTop_toBottomOf="@id/title_card_country_latitude" />

        <TextView
            android:id="@+id/card_country_longitude"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:theme="@style/MyInformTextView"
            app:layout_constraintBottom_toBottomOf="@id/title_card_country_longitude"
            app:layout_constraintStart_toEndOf="@id/title_card_country_longitude" />

        <TextView
            android:id="@+id/parenthesis"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/parenthesis"
            android:theme="@style/MyTextView"
            app:layout_constraintBottom_toBottomOf="@id/card_country_longitude"
            app:layout_constraintStart_toEndOf="@id/card_country_longitude" />


        <TextView
            android:id="@+id/title_bank_information"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/cardview_default_elevation"
            android:text="@string/bank_card"
            android:theme="@style/MyTextView"
            app:layout_constraintStart_toStartOf="@id/title_card_country"
            app:layout_constraintTop_toBottomOf="@id/title_card_country_longitude" />

        <TextView
            android:id="@+id/bank_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:theme="@style/MyInformTextView"
            app:layout_constraintBottom_toBottomOf="@id/title_bank_information"
            app:layout_constraintStart_toEndOf="@id/title_bank_information" />

        <TextView
            android:id="@+id/comma"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/comma"
            android:theme="@style/MyTextView"
            app:layout_constraintBottom_toBottomOf="@id/bank_name"
            app:layout_constraintStart_toEndOf="@id/bank_name" />

        <TextView
            android:id="@+id/bank_city"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:theme="@style/MyInformTextView"
            app:layout_constraintBottom_toBottomOf="@id/comma"
            app:layout_constraintStart_toEndOf="@id/comma" />

        <TextView
            android:id="@+id/bank_url"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:theme="@style/MyInformTextView"
            app:layout_constraintStart_toStartOf="@id/bank_name"
            app:layout_constraintTop_toBottomOf="@id/bank_name" />

        <TextView
            android:id="@+id/bank_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:theme="@style/MyInformTextView"
            app:layout_constraintStart_toStartOf="@id/bank_url"
            app:layout_constraintTop_toBottomOf="@id/bank_url" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>